--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
  
     <!--ПІДВАЛ САЙТУ-->
     <footer class="footer">
-        <div class="container">
+        <div class="container-footer">
             <span>© 2017<a href="#"></a></span> ТриКомпи
           <p>Діагностика/ремонт/чистка ноутбуків</p>
             <p> All right reserved by <a href="https://www.facebook.com/olesia.yakymchuk">Olesya Pleshchuk </a></p>
